--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "reactapplication",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://syedpink.github.io/Apps",
   "type": "module",
-  "homepage":"https://github.com/syedpink/Games.git",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d dist"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.0.0",
