--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reactapplication",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://syedpink.github.io/Apps",
+  "homepage": "https://syedpink.github.io/reactapp",
   "type": "module",
   "scripts": {
     "dev": "vite",
